# rag-eval

./: .gitignore  README.md  eval.py  main.py  pyproject.toml
storage/: default__vector_store.json  docstore.json  index_store.json
